Test improvements related to the logging module

--- a/src/engine/test/source/api/catalog/CMakeLists.txt
+++ b/src/engine/test/source/api/catalog/CMakeLists.txt
@@ -4,5 +4,9 @@ add_executable(catalog_test
   resource_test.cpp
 )
 
+target_include_directories(catalog_test
+  PRIVATE ${TEST_SOURCE_DIR}/base/utils/tests
+)
+
 target_link_libraries(catalog_test gtest_main api)
 gtest_discover_tests(catalog_test)
