--- a/src/engine/test/source/api/kvdb/CMakeLists.txt
+++ b/src/engine/test/source/api/kvdb/CMakeLists.txt
@@ -2,5 +2,9 @@ add_executable(kvdb_handler_test
   handlers_test.cpp
 )
 
+target_include_directories(kvdb_handler_test
+  PRIVATE ${TEST_SOURCE_DIR}/base/utils/tests
+)
+
 target_link_libraries(kvdb_handler_test gtest_main api kvdb)
 gtest_discover_tests(kvdb_handler_test)
