--- a/src/engine/test/source/json/CMakeLists.txt
+++ b/src/engine/test/source/json/CMakeLists.txt
@@ -5,6 +5,7 @@ add_executable(json_test
 target_include_directories(json_test
     PUBLIC
     ${ENGINE_SOURCE_DIR}/json
+    ${TEST_SOURCE_DIR}/base/utils/tests
 )
 
 # TODO check if it's ok to add base for the json dep
