--- a/src/engine/test/source/kvdb/CMakeLists.txt
+++ b/src/engine/test/source/kvdb/CMakeLists.txt
@@ -2,6 +2,11 @@ add_executable(kvdb_test
   ${TEST_SOURCE_DIR}/kvdb/kvdb_test.cpp
 )
 
+target_include_directories(kvdb_test
+  PRIVATE
+  ${TEST_SOURCE_DIR}/base/utils/tests
+)
+
 target_link_libraries(kvdb_test gtest_main kvdb base)
 
 gtest_discover_tests(kvdb_test)
