--- a/src/engine/ruleset/decoders/windows/windows-powershell-operational.yml
+++ b/src/engine/ruleset/decoders/windows/windows-powershell-operational.yml
@@ -30,16 +30,16 @@ normalize:
    - process.title: $~windows.Event.EventData.HostName
 
   # User fields
-   - ~temp.user_parts: +s_to_array/$~windows.Event.EventData.User/\
+   - ~temp.user_parts: +split/$~windows.Event.EventData.User/\
    - destination.user.domain: $~temp.user_parts.0
    - destination.user.name: $~temp.user_parts.1
-   - related.user: +a_append/destination.user.name
-   - ~temp.connected_user_parts: +s_to_array/$~windows.Event.EventData.ConnectedUser/\
+   - related.user: +array_append/destination.user.name
+   - ~temp.connected_user_parts: +split/$~windows.Event.EventData.ConnectedUser/\
    - source.user.domain: ~temp.connected_user_parts.0
    - source.user.name: ~temp.connected_user_parts.1
    - user.name: $source.user.name
    - user.domain: $source.user.domain
-   - related.user: +a_append/source.user.name
+   - related.user: +array_append/source.user.name
 
    # PowerShell fields
    - powershell.sequence: $~windows.Event.EventData.MessageNumber
@@ -74,5 +74,5 @@ normalize:
 
 # Cleanup
  - map:
-   - ~temp: +ef_delete
-   - ~windows: +ef_delete
+   - ~temp: +delete
+   - ~windows: +delete
